[ ✨ update ] 패키징 세팅 변경
패키징할 맵에
mainmenulevel
customlobbylevel
loaginglevel
추가

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -141,6 +141,9 @@ bSkipMovies=False
 -IniSectionDenylist=StorageServers
 +IniSectionDenylist=HordeStorageServers
 +IniSectionDenylist=StorageServers
++MapsToCook=(FilePath="/Game/Maps/MainLevel")
++MapsToCook=(FilePath="/Game/Maps/CustomLobbyLevel")
++MapsToCook=(FilePath="/Game/Maps/LoadingLevel")
 +DirectoriesToAlwaysCook=(Path="/Wwise/WwiseTree")
 +DirectoriesToAlwaysCook=(Path="/Wwise/WwiseTypes")
 bRetainStagedDirectory=False
