--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/WwiseAudio/Test_Assets/CJM_TestLevel.CJM_TestLevel
-EditorStartupMap=/Game/WwiseAudio/Test_Assets/CJM_TestLevel.CJM_TestLevel
+GameDefaultMap=/Game/Maps/MainLevel.MainLevel
+EditorStartupMap=/Game/Maps/MainLevel.MainLevel
+GameInstanceClass=/Script/GAS.GS_GameInstance
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
@@ -272,6 +273,8 @@ DefaultPlatformService=Steam
 [OnlineSubsystemSteam]
 bEnabled=true
 SteamDevAppId=480
+GameServerQueryPort=27015
  
 [/Script/OnlineSubsystemSteam.SteamNetDriver]
-	NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
+NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
+
