[ ✨ update ] FOG 나이아가라, 머터리얼 제작

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/MainLevel.MainLevel
-EditorStartupMap=/Game/Maps/MainLevel.MainLevel
+GameDefaultMap=/Game/WwiseAudio/Test_Assets/CJM_TestLevel.CJM_TestLevel
+EditorStartupMap=/Game/WwiseAudio/Test_Assets/CJM_TestLevel.CJM_TestLevel
 GameInstanceClass=/Script/GAS.GS_GameInstance
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
