--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -331,6 +331,7 @@ DefaultPlatformService=Steam
 [OnlineSubsystemSteam]
 bEnabled=true
 SteamDevAppId=480
+bAllowP2PPacketRelay=true
 GameServerQueryPort=27015
  
 [/Script/OnlineSubsystemSteam.SteamNetDriver]
