[ 🔨script ] Wwise 추가

--- a/GAS.uproject
+++ b/GAS.uproject
@@ -25,6 +25,10 @@
 			]
 		},
 		{
+			"Name": "Wwise",
+			"Enabled": true
+		},
+		{
 			"Name": "OnlineSubsystemSteam",
 			"Enabled": true
 		},
