[ 🔨script ] 패키징 관련 설정
DefaultEngine.ini
기본 에디터 맵을 InGameTestLevel로 변경.
패키징 기본 맵을 MainLevel로 변경.

DefaultGame.ini
cook 할 맵 목록에 InGameLevel과 InGameTestLevel 추가

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/WwiseAudio/Test_Assets/CJM_TestLevel.CJM_TestLevel
-EditorStartupMap=/Game/WwiseAudio/Test_Assets/CJM_TestLevel.CJM_TestLevel
+GameDefaultMap=/Game/Maps/MainLevel.MainLevel
+EditorStartupMap=/Game/Maps/Level/InGameTestLevel.InGameTestLevel
 GameInstanceClass=/Script/GAS.GS_GameInstance
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
@@ -326,7 +326,7 @@ ChaosSettings=(DefaultThreadingModel=TaskGraph,DedicatedThreadTickMode=VariableC
 +NetDriverDefinitions=(DefName="GameNetDriver",DriverClassName="OnlineSubsystemSteam.SteamNetDriver",DriverClassNameFallback="OnlineSubsystemUtils.IpNetDriver")
  
 [OnlineSubsystem]
-DefaultPlatformService=NULL
+DefaultPlatformService=Steam
  
 [OnlineSubsystemSteam]
 bEnabled=true
