--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -144,6 +144,8 @@ bSkipMovies=False
 +MapsToCook=(FilePath="/Game/Maps/MainLevel")
 +MapsToCook=(FilePath="/Game/Maps/CustomLobbyLevel")
 +MapsToCook=(FilePath="/Game/Maps/LoadingLevel")
++MapsToCook=(FilePath="/Game/Maps/InGameLevel")
++MapsToCook=(FilePath="/Game/Maps/Level/InGameTestLevel")
 +DirectoriesToAlwaysCook=(Path="/Wwise/WwiseTree")
 +DirectoriesToAlwaysCook=(Path="/Wwise/WwiseTypes")
 bRetainStagedDirectory=False
