[ 🔨script ] 패키징 시작 맵 변경

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,7 +4,7 @@
 GameDefaultMap=/Game/Maps/MainLevel.MainLevel
 EditorStartupMap=/Game/WwiseAudio/Test_Assets/CJM_TestLevel.CJM_TestLevel
 GameInstanceClass=/Script/GAS.GS_GameInstance
-GameDefaultMap=/Game/WwiseAudio/Test_Assets/CJM_TestLevel.CJM_TestLevel
+GameDefaultMap=/Game/Maps/MainLevel.MainLevel
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/Player/TEST/BP_GameMode.BP_GameMode_C
 GlobalDefaultServerGameMode=None
@@ -331,7 +331,7 @@ ChaosSettings=(DefaultThreadingModel=TaskGraph,DedicatedThreadTickMode=VariableC
 +NetDriverDefinitions=(DefName="GameNetDriver",DriverClassName="OnlineSubsystemSteam.SteamNetDriver",DriverClassNameFallback="OnlineSubsystemUtils.IpNetDriver")
 
 [OnlineSubsystem]
-DefaultPlatformService=NULL
+DefaultPlatformService=Steam
 
 [OnlineSubsystemSteam]
 bEnabled=true
