--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -345,3 +345,6 @@ GameServerQueryPort=27015
 [/Script/OnlineSubsystemSteam.SteamNetDriver]
 NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
 
+[/Script/GameplayDebugger.GameplayDebuggerConfig]
+CategorySlot4=NumPadFour
+
