[ ✨ update ] CustomLevelUI 수정

--- a/GAS.uproject
+++ b/GAS.uproject
@@ -12,7 +12,8 @@
 				"Engine",
 				"UMG",
 				"CoreUObject",
-				"AIModule"
+				"AIModule",
+				"CommonUI"
 			]
 		}
 	],
@@ -48,6 +49,10 @@
 			"Name": "BlockoutToolsPlugin",
 			"Enabled": true,
 			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/content/d337b97aca8947a893526964e179acfd"
+		},
+		{
+			"Name": "CommonUI",
+			"Enabled": true
 		}
 	]
 }
