--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -222,6 +222,7 @@ FontDPI=72
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/GAS")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/GAS")
+GameViewportClientClassName=/Script/CommonUI.CommonGameViewportClient
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
