[ TEST ] Chan 충돌.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,10 +1,10 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/MainLevel.MainLevel
-EditorStartupMap=/Game/WwiseAudio/Test_Assets/CJM_TestLevel.CJM_TestLevel
+GameDefaultMap=/Game/Player/TEST/TestMap.TestMap
+EditorStartupMap=/Game/Player/TEST/TestMap.TestMap
 GameInstanceClass=/Script/GAS.GS_GameInstance
-GameDefaultMap=/Game/Maps/MainLevel.MainLevel
+GameDefaultMap=/Game/Player/TEST/TestMap.TestMap
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/Player/TEST/BP_GameMode.BP_GameMode_C
 GlobalDefaultServerGameMode=None
