--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/WwiseAudio/Test_Assets/CJM_TestLevel.CJM_TestLevel
+EditorStartupMap=/Game/Maps/Level/InGameTestLevel.InGameTestLevel
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=True
@@ -10,7 +10,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/GAS.GS_GameInstance
-GameDefaultMap=/Game/WwiseAudio/Test_Assets/CJM_TestLevel.CJM_TestLevel
+GameDefaultMap=/Game/Maps/MainLevel.MainLevel
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/GamePlay/InGame/BP_YJGM.BP_YJGM_C
 GlobalDefaultServerGameMode=None
