[ 🔨script ] 디폴트 맵 수정

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,10 +1,10 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Player/TEST/TestMap.TestMap
-EditorStartupMap=/Game/Player/TEST/TestMap.TestMap
+GameDefaultMap=/Game/Maps/MainLevel.MainLevel
+EditorStartupMap=/Game/Maps/Level/InGameTestLevel.InGameTestLevel
 GameInstanceClass=/Script/GAS.GS_GameInstance
-GameDefaultMap=/Game/Player/TEST/TestMap.TestMap
+GameDefaultMap=/Game/Maps/MainLevel.MainLevel
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/GamePlay/InGame/BP_YJGM.BP_YJGM_C
 GlobalDefaultServerGameMode=None
