[ ✨ update ]  아이콘 변경

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -150,6 +150,8 @@ bSkipMovies=False
 +MapsToCook=(FilePath="/Game/Maps/ResultLevel")
 +DirectoriesToAlwaysCook=(Path="/Wwise/WwiseTree")
 +DirectoriesToAlwaysCook=(Path="/Wwise/WwiseTypes")
++TestDirectoriesToNotSearch=(Path="/Game/UI")
++TestDirectoriesToNotSearch=(Path="/Game/UI")
 bRetainStagedDirectory=False
 CustomStageCopyHandler=
 
