[ 🐞 bugfix ] 패키징 오류 진짜 해결
로컬 파일에 BP_GameMode 남아있던 껍데기 파일 정리
+맵v2 수정

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -147,6 +147,7 @@ bSkipMovies=False
 +MapsToCook=(FilePath="/Game/Maps/Level/InGameTestLevel")
 +MapsToCook=(FilePath="/Game/Maps/BossLevel")
 +MapsToCook=(FilePath="/Game/Maps/ResultLevel")
++MapsToCook=(FilePath="/Game/Maps/Level/InGameTestLevel_v2")
 +DirectoriesToAlwaysCook=(Path="/Wwise/WwiseTree")
 +DirectoriesToAlwaysCook=(Path="/Wwise/WwiseTypes")
 bRetainStagedDirectory=False
