--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,12 +1,18 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/MainLevel.MainLevel
 EditorStartupMap=/Game/Maps/Level/InGameTestLevel.InGameTestLevel
+LocalMapOptions=
+TransitionMap=None
+bUseSplitscreen=True
+TwoPlayerSplitscreenLayout=Horizontal
+ThreePlayerSplitscreenLayout=FavorTop
+FourPlayerSplitscreenLayout=Grid
+bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/GAS.GS_GameInstance
 GameDefaultMap=/Game/Maps/MainLevel.MainLevel
 ServerDefaultMap=/Engine/Maps/Entry.Entry
-GlobalDefaultGameMode=/Game/GamePlay/InGame/BP_YJGM.BP_YJGM_C
+GlobalDefaultGameMode=/Game/Player/TEST/BP_SJEGM.BP_SJEGM_C
 GlobalDefaultServerGameMode=None
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
