--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -12,7 +12,7 @@ bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/GAS.GS_GameInstance
 GameDefaultMap=/Game/Maps/MainLevel.MainLevel
 ServerDefaultMap=/Engine/Maps/Entry.Entry
-GlobalDefaultGameMode=/Game/Player/TEST/BP_SJEGM.BP_SJEGM_C
+GlobalDefaultGameMode=/Game/GamePlay/InGame/BP_HJTestGM.BP_HJTestGM_C
 GlobalDefaultServerGameMode=None
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
