--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/Level/InGameTestLevel.InGameTestLevel
+EditorStartupMap=/Game/Player/TEST/TestMap.TestMap
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=True
@@ -83,7 +83,7 @@ r.Lumen.HardwareRayTracing.LightingMode=0
 r.Lumen.TranslucencyReflections.FrontLayer.EnableForProject=False
 r.Lumen.TraceMeshSDFs=1
 r.Lumen.Reflections.HardwareRayTracing.Translucent.Refraction.EnableForProject=True
-r.Shadow.Virtual.Enable=1
+r.Shadow.Virtual.Enable=0
 r.RayTracing=False
 r.RayTracing.Shadows=False
 r.RayTracing.UseTextureLod=False
