--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/Level/InGameTestLevel_v2.InGameTestLevel_v2
+EditorStartupMap=/Game/Player/TEST/TestMap.TestMap
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=True
