--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -147,6 +147,7 @@ bSkipMovies=False
 +MapsToCook=(FilePath="/Game/Maps/BossLevel")
 +MapsToCook=(FilePath="/Game/Maps/ResultLevel")
 +MapsToCook=(FilePath="/Game/Maps/Level/InGameTestLevel_v2")
++MapsToCook=(FilePath="/Game/Maps/InGameLevel")
 +DirectoriesToAlwaysCook=(Path="/Wwise/WwiseTree")
 +DirectoriesToAlwaysCook=(Path="/Wwise/WwiseTypes")
 +DirectoriesToAlwaysStageAsUFS=(Path="UI/RTS/Cursor")
