[ 🐞 bugfix ] 인게임 스폰 오류
포탈 레플리케이션
보스방에 포탈 추가
스타트포인트 레플리케이션
수동 쿠킹 경로 추가

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -150,6 +150,7 @@ bSkipMovies=False
 +MapsToCook=(FilePath="/Game/Maps/InGameLevel")
 +DirectoriesToAlwaysCook=(Path="/Wwise/WwiseTree")
 +DirectoriesToAlwaysCook=(Path="/Wwise/WwiseTypes")
++DirectoriesToAlwaysCook=(Path="/Game/Props")
 +DirectoriesToAlwaysStageAsUFS=(Path="UI/RTS/Cursor")
 bRetainStagedDirectory=False
 CustomStageCopyHandler=
