--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -222,7 +222,7 @@ CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
 
 [/Script/Engine.UserInterfaceSettings]
 RenderFocusRule=NavigationOnly
-HardwareCursors=((Default, (CursorPath="/UI/Icon_Cursor_GAS",HotSpot=(X=0.100000,Y=0.000000))))
+HardwareCursors=()
 SoftwareCursors=()
 ApplicationScale=1.000000
 UIScaleRule=ShortestSide
