[ 🚚 move ] 영상 위치 변경

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -152,6 +152,7 @@ bSkipMovies=False
 +DirectoriesToAlwaysCook=(Path="/Wwise/WwiseTypes")
 +DirectoriesToAlwaysCook=(Path="/Game/Props")
 +DirectoriesToAlwaysStageAsUFS=(Path="UI/RTS/Cursor")
++DirectoriesToAlwaysStageAsUFS=(Path="Video")
 bRetainStagedDirectory=False
 CustomStageCopyHandler=
 
