--- a/.gitattributes
+++ b/.gitattributes
@@ -9,4 +9,5 @@
 *.wav   filter=lfs diff=lfs merge=lfs -text
 *.ogg   filter=lfs diff=lfs merge=lfs -text
 *.mp3   filter=lfs diff=lfs merge=lfs -text
+*.mp4   filter=lfs diff=lfs merge=lfs -text
 
